--- a/css/sales.scss
+++ b/css/sales.scss
@@ -3,6 +3,7 @@
     position: relative;
     width: 100%;
     float: left;
+    z-index: 1;
 
     h1, h2, .explanation, .actions {
         text-align: center;
